@@ -1,3 +1,9 @@
+2007-11-21  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-start.el (gnus-get-unread-articles): Don't prevent from checking
+	foreign groups unless a group level is specified by a user.
+	Reported by Dan Nicolaescu <dann@ics.uci.edu>.
+
 2007-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* nntp.el (nntp-insert-buffer-substring, nntp-copy-to-buffer): New
